Add AppRoleProvider
