# Sources/VaultCourier/VaultResponses/AuthMethods/AppRole/AppRoleIDResponse.swift
@@ -18,12 +18,5 @@
 public struct AppRoleIDResponse: Sendable {
     public let requestID: String
 
-    public let roleId: String
-}
-
-extension AppRoleIDResponse {
-    init(component: Components.Schemas.ReadAppRoleIdResponse) {
-        self.requestID = component.requestId
-        self.roleId = component.data.roleId
-    }
+    public let roleID: String
 }
